Fix availablity of toolbars after editing

Bascially, when the toolbars are edited without any document open,
they should still be disabled after editing.

BUG:402679