libs/ui/KisMainWindow.h
@@ -425,6 +425,8 @@ private Q_SLOTS:
 
     void windowScreenChanged(QScreen *screen);
 
+    void slotXmlGuiMakingChanges(bool finished);
+
 protected:
 
     void closeEvent(QCloseEvent * e) override;
